[package]
name = "census"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-or-later"
description = "LDAP user and group administration TUI"

[[bin]]
name = "census"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
crossterm  = "0.28"
ldap3     = { version = "0.11", default-features = false, features = ["sync", "tls-rustls"] }
mullion   = { path = "../mullion", version = "0.3.0" }
rpassword = "7"
serde     = { version = "1", features = ["derive"] }
toml      = "0.8"

[profile.release]
strip = true
